# mmrp

./: .eslintcache  .gitignore  README.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
client/: .env.local  .env.production  .lintstagedrc  .lintstagedrc.cjs  .prettierignore  eslint.config.mjs  jest.config.ts  next.config.ts  package-lock.json  package.json  postcss.config.mjs  tailwind.config.js
client/.husky/: pre-commit
client/public/: config_template.json
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/components/cards/: ComparisonMetrics.tsx  ComparisonView.tsx  DragAndDropArea.tsx  ParameterConfiguration.tsx  TopLeftCard.tsx  VideoComparisonView.tsx
client/src/components/comparison-metrics/: VideoQualityMetrics.tsx
client/src/components/comparison-view/: FrameStreamPlayer.tsx  InterleavingFrames.tsx  MenuDropdown.tsx  Player.tsx  PlayerControls.tsx  SideBySide.tsx  UnifiedPlayer.tsx  VideoPlayer.tsx  types.ts
client/src/components/drag-and-drop/: CanvasContextMenu.tsx  ContextMenu.tsx  DeleteModal.tsx  ExamplePipelines.tsx  FlowCanvas.tsx  FlowNode.tsx  ModuleItem.tsx  ModuleItemGroup.tsx  Modules.tsx  NodeContextMenu.tsx  ParameterConfiguration.tsx  SideBar.tsx  SideBarItem.tsx  contextMenuReducer.ts  types.ts  util.ts
client/src/components/drag-and-drop/context-menu/: CanvasContextMenu.tsx  CanvasContextMenuConfig.tsx  CanvasModal.tsx  ContextMenu.tsx  NodeContextMenu.tsx  NodeContextMenuConfig.tsx  contextMenuReducer.ts  useCanvasActions.ts  useNodeActions.ts
client/src/components/drag-and-drop/parameter-configuration/: ParameterConfiguration.tsx  ParameterConfigurationDrawer.tsx  ParameterInfoToolTip.tsx  ParameterTooltip.tsx
client/src/components/layout/: AppLayout.tsx  CenterColumn.tsx  LeftColumn.tsx  Loading.tsx  RightColumn.tsx  TopNavBar.tsx  VideoPlayer.tsx
client/src/components/modals/: DualFileRow.tsx  GenericModal.tsx  SingleFileRow.tsx  UploadBinaryModal.tsx  types.ts
client/src/components/modules/: modulesFormatValidator.ts  modulesRegistry.ts
client/src/components/sidebar/: AppDrawer.tsx  LeftSidebar.tsx  Sidebar.tsx  SidebarItem.tsx  SidebarPanel.tsx  sidebar-config.tsx  types.ts  useLeftSidebar.tsx  util.ts
client/src/components/util/: ContextMenu.tsx  Modal.tsx  paramPropogation.ts  types.ts
client/src/contexts/: AppProviders.tsx  ExamplePipelinesContext.tsx  FramesContext.tsx  ModulesContext.tsx  SessionContext.tsx  SideBarContext.tsx  SidebarContext.tsx  VideoContext.tsx  VideoMetricsContext.tsx  VideoReloadContext.tsx  WebSocketContext.tsx  types.ts  videoReloadContext.tsx
client/src/hooks/: useExamplePipelines.ts  useModule.ts  usePersistPipeline.ts  usePersistPreset.ts  usePersistTemplate.ts
client/src/services/: apiClient.ts  binaryService.ts  pipelineService.ts  requestHandler.ts  sessionService.ts  videoService.ts  webSocketClient.ts
client/src/types/: frame.ts  metrics.ts  module.ts  pipeline.ts  video.ts
client/src/utils/: CopyableToast.tsx  UndoToast.tsx  case.ts  config.ts  configValidator.ts  pipelineSerializer.ts  shareFunctionality.ts  sharedFunctionality.ts  types.ts
client/tests/unit/contexts/: VideoMetricsContext.test.tsx  VideoReloadContext.test.tsx
client/tests/unit/fixtures/: moduleResponse.ts
client/tests/unit/helpers/: helpers.ts
client/tests/unit/hooks/: useModule.test.ts
client/tests/unit/services/: videoService.test.ts
client/tests/unit/utils/: camelize.test.ts  pipelineSerializer.test.ts
prototypes/socket-based-streaming/: README.md  main.py  pyproject.toml  server.py
prototypes/socket-based-streaming/templates/: index.html
scripts/: run.sh  setup.sh
server/: .gitignore  .lintstagedrc  .lintstagedrc.cjs  main.py  pyproject.toml
server/app/: main.py
server/app/context/: session.py
server/app/db/: convert_json_to_modules.py  mock_data.json  mock_test.json
server/app/db/examples/: blur_to_color.json  color_to_blur.json
server/app/db/json_data/: module_data.json  simple-video-processor-app.json
server/app/modules/: base_module.py  blur.py  colorspace.py  module.py  resize.py  result.py  source.py
server/app/modules/generic/: binary_module.py
server/app/modules/inputs/: video_source.py
server/app/modules/outputs/: video_output.py
server/app/modules/transforms/: blur.py  color.py  color_space.py  resize.py
server/app/modules/utils/: constraints.py  enums.py
server/app/routers/: binaries.py  frame.py  module.py  modules.py  pipeline.py  session.py  video.py
server/app/schemas/: frame.py  metrics.py  module.py  pipeline.py  video.py
server/app/scripts/: execute_binary.py
server/app/services/: binaries.py  frame.py  module.py  module_registry.py  modules.py  pipeline.py  session_manager.py
server/app/utils/: constants.py  enums.py  quality_metrics.py  shared_functionality.py
server/binaries/simple-video-processor-app/Darwin-arm64/: config.json  libsimple-video-processor.dylib  simple-video-processor-app
server/binaries/simple-video-processor-app/Linux-x86_64/: simple-video-processor-app
server/binaries/simple-video-processor-app/Windows-AMD64/: config.json
server/example-cli/simple-video-processor/: CMakeLists.txt  README.md  cmdline.h  main.cpp  simple-video-processor-impl.cpp  simple-video-processor-impl.h  simple-video-processor.cpp  simple-video-processor.h  utils.hpp
server/tests/: test_binaries.py  test_module_registry.py  test_modules.py  test_pipeline.py
server/tests/integration/: test_binaries_integration.py  test_modules_integration.py  test_pipeline_integration.py  test_video_integration.py
server/tests/utils/: test_quality_metrics_utils.py
