[project]
name = "server"
version = "0.1.0"
description = "Backend server for Multimedia Research Pipeline project."
readme = "../README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.12",
    "numpy>=2.3.1",
    "opencv-python-headless>=4.11.0.86",
    "pydantic==2.11.5",
    "uvicorn[standard]==0.34.3",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]
