[project]
name = "server"
version = "0.1.0"
description = "Backend server for Multimedia Research Pipeline project."
readme = "../README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.12",
    "httpx>=0.28.1",
    "numpy>=2.3.1",
    "opencv-python-headless>=4.11.0.86",
    "pydantic==2.11.5",
    "python-multipart>=0.0.20",
    "scikit-image>=0.25.2",
    "uvicorn[standard]==0.34.3",
]

[dependency-groups]
dev = [
    "pyright>=1.1.402",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.11.13",
]

[tool.pyright]
include = ["app", "main.py"]
exclude = [
    "**/__pycache__",
]
pythonPlatform = "All"
reportMissingImports = "error"
reportMissingTypeStubs = false
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
enableReachabilityAnalysis = true
typeCheckingMode = "strict"

executionEnvironments = [
    { root = "." },
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]